# dac

./: pom.xml
src/main/native/linux/: .anjuta_sym_db.db
src/main/native/linux/.anjuta/session/: anjuta.session  dock-layout.xml
src/main/native/linux/misc/downloads/: nautilus-cd-burner_2.25.3-0ubuntu4.dsc  nautilus-dropbox-0.6.7.tar.bz2  nautilus-pastebin_0.4.1-2ubuntu1.dsc  (+1 more)
src/main/native/linux/misc/downloads/mythtvfs-fuse-0.6.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  mythtvfs.c  mythtvfs.init  mythtvfs.pod
src/main/native/linux/misc/downloads/mythtvfs-fuse-0.6.1/debian/: README.source  changelog  control  copyright  rules  watch
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/data/: Makefile.am  Makefile.in  libnautilus-burn.pc.in  nautilus-cd-burner-open-iso.desktop.in  nautilus-cd-burner.desktop.in  nautilus-cd-burner.glade
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/data/icons/: Makefile.am  Makefile.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/data/icons/16x16/: Makefile.am  Makefile.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/data/icons/22x22/: Makefile.am  Makefile.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/data/icons/24x24/: Makefile.am  Makefile.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/data/icons/scalable/: Makefile.am  Makefile.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/debian/: README.Debian  changelog  control  control.in  libnautilus-burn-dev.install  nautilus-cd-burner.install  nautilus-cd-burner.preinst  rules  watch
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/debian/patches/: 01_enable_gnome_mount_force.patch  99_ltmain_as-needed.patch
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/doc/: Makefile.in
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/doc/reference/: Makefile.am  Makefile.in  nautilus-cd-burner-docs.sgml  nautilus-cd-burner-sections.txt  nautilus-cd-burner.types
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/doc/reference/html/: NautilusBurnDriveSelection.html  ch01.html  index.html  index.sgml  nautilus-cd-burner-nautilus-burn-drive-monitor.html  nautilus-cd-burner-nautilus-burn-drive.html  nautilus-cd-burner-nautilus-burn-features.html  nautilus-cd-burner-nautilus-burn-init.html  nautilus-cd-burner-nautilus-burn-process.html  nautilus-cd-burner-nautilus-burn-recorder.html  nautilus-cd-burner.devhelp  nautilus-cd-burner.devhelp2
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/doc/reference/tmpl/: nautilus-burn-drive-monitor.sgml  nautilus-burn-drive-selection.sgml  nautilus-burn-drive.sgml  nautilus-burn-features.sgml  nautilus-burn-init.sgml  nautilus-burn-process.sgml  nautilus-burn-recorder.sgml  nautilus-burn.sgml
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/doc/reference/xml/: nautilus-burn-drive-monitor.xml  nautilus-burn-drive-selection.xml  nautilus-burn-drive.xml  nautilus-burn-features.xml  nautilus-burn-init.xml  nautilus-burn-process.xml  nautilus-burn-recorder.xml
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  (+40 more)
src/main/native/linux/misc/downloads/nautilus-cd-burner-2.25.3/src/: Makefile.am  Makefile.in  bcs-test.c  burn-extension.c  cdrecorder-marshal.list  list_cddrives.c  make-iso.c  make-iso.h  nautilus-burn-bar.c  nautilus-burn-drive-monitor-private.h  nautilus-burn-drive-monitor.c  nautilus-burn-drive-monitor.h  nautilus-burn-drive-private.h  nautilus-burn-drive-selection.c  nautilus-burn-drive-selection.h  nautilus-burn-drive.c  nautilus-burn-drive.h  nautilus-burn-features.h  nautilus-burn-features.h.in  nautilus-burn-init.c  nautilus-burn-init.h  nautilus-burn-process.c  nautilus-burn-process.h  nautilus-burn-recorder-marshal.c  nautilus-burn-recorder-marshal.h  nautilus-burn-recorder.c  nautilus-burn-recorder.h  nautilus-burn.h  nautilus-cd-burner.c  nautilus-cd-burner.h  nautilus-file-operations-progress-icons.h  ncb-operation.c  ncb-operation.h  ncb-progress-dialog.c  ncb-progress-dialog.h  ncb-rename-dialog.c  ncb-rename-dialog.h  ncb-selection-dialog.c  ncb-selection-dialog.h  ncb-selection.c  (+3 more)
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/: ChangeLog  INSTALL  Makefile.am  Makefile.in  config.h.in  configure  configure.in  libtool
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/debian/: changelog  control  rules  watch
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/debian/patches/: 01_fix_install_dir.patch  02_install_missing_samba.patch  03_no_verbose_logging.patch  04_use_correct_icon.patch  05_dependencies.patch  06_fix-validation.patch  07_set-title.patch  08_change-confusing-wording.patch  09_change-comments-location.patch  10_fix-writable-detection.patch  11_use-gio.patch  12_undoable-action.patch  13_permissions.patch  14_glade-to-gtkbuilder.patch  series
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/interfaces/: Makefile.am  Makefile.in  share-dialog.glade.in
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/pixmaps/: Makefile.am  Makefile.in
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/po/: ChangeLog  POTFILES.in  ar.po  ca.po  de.po  dz.po  en_GB.po  es.po  eu.po  fi.po  fr.po  hu.po  it.po  pl.po  pt_BR.po
src/main/native/linux/misc/downloads/nautilus-share-0.7.2/src/: Makefile.am  Makefile.in  nautilus-share.c  nautilus-share.h  shares.c
src/main/native/linux/src/: .cproject  .project  Makefile  build.sh  fsclient  main.c
(+76 files in other folders)
